--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,3 @@
-/* @font-face {
-  font-family: 'MyFont';
-  src:
-    url('./Roboto-Bold.ttf') format('truetype'),
-    url('./OpenSans-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-} */
-
-.hello {
-  color: red;
-  /* font-family: 'MyFont'; */
+body {
+  background: red;
 }
